added semantic ui and form validators

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,7 +1,26 @@
 <h3>Create an Account</h3>
 
-<form [formGroup]='authForm'>
-    <input type="text" formControlName="username">
-    <input type="text" formControlName="password">
-    <input type="text" formControlName="passwordConfirmation">
+<form class="ui form" [formGroup]='authForm'>
+    <div class="field">
+        <label>Username</label>
+        <input type="text" formControlName="username">
+    </div>
+    {{ authForm.get('username').errors | json }}
+    <div class="field">
+        <label>Password</label>
+        <input type="text" formControlName="password">
+        {{ authForm.get('password').errors | json }}
+
+
+    </div>
+    <div class="field">
+        <label>Confirm Password</label>
+        <input type="text" formControlName="passwordConfirmation">
+        {{ authForm.get('passwordConfirmation').errors | json }}
+
+    </div>
+
+    <button class="ui submin button primary">
+        Submit
+    </button>
 </form>
