--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,1 +1,33 @@
-<p>input works!</p>
+<div class="field">
+    <label> {{label}} </label>
+    <input [formControl]="control" type="text">
+    <div *ngIf="showErrors()" class="ui pointing red basic label">
+        <p *ngIf="control.errors.required">
+            Value is required
+        </p>
+        <p *ngIf="control.errors.minlength">
+            Value you entered is
+            {{control.errors.minlength.actualLength}}
+            characters long, but it must be atleast
+            {{control.errors.minlength.requiredLength}}
+            characters
+
+        </p>
+        <p *ngIf="control.errors.maxlength">
+            Value you entered is
+            {{control.errors.maxlength.actualLength}}
+            characters long, but it cannot be longer than
+            {{control.errors.maxlength.requiredLength}}
+            characters
+        </p>
+        <p *ngIf="control.errors.pattern">
+            Invalid Format
+        </p>
+        <p *ngIf="control.errors.nonUniqueUsername">
+            Username is taken
+        </p>
+        <p *ngIf="control.errors.noConnection">
+            you dont have internet connection
+        </p>
+    </div>
+</div>
