--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,25 +1,19 @@
 <h3>Create an Account</h3>
 
 <form class="ui form" [formGroup]='authForm'>
-    <!-- <div class="field">
-        <label>Username</label>
-        <input type="text" formControlName="username">
-    </div> -->
-
-    <app-input label="Username" [control]="authForm.get('username')"></app-input>
-    {{ authForm.get('username').errors | json }}
-    <div class="field">
-        <label>Password</label>
-        <input type="text" formControlName="password">
-        {{ authForm.get('password').errors | json }}
 
 
-    </div>
-    <div class="field">
-        <label>Confirm Password</label>
-        <input type="text" formControlName="passwordConfirmation">
-        {{ authForm.get('passwordConfirmation').errors | json }}
+    <app-input label="Username" inputType="text" [control]="authForm.get('username')"></app-input>
+    <app-input label="Password" inputType="password" [control]="authForm.get('password')"></app-input>
+    <app-input label="Password Confirmation" inputType="password" [control]="authForm.get('passwordConfirmation')">
+    </app-input>
 
+
+    <div *ngIf="authForm.get('password').touched && authForm.get('passwordConfirmation').touched && authForm.errors"
+        class="ui red basic label">
+        <p *ngIf="authForm.errors.passwordsDontMatch">
+
+        </p>
     </div>
 
     <button class="ui submin button primary">
