--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,6 +1,6 @@
 <div class="field">
     <label> {{label}} </label>
-    <input [formControl]="control" type="text">
+    <input [type]="inputType" [formControl]="control" type="text">
     <div *ngIf="showErrors()" class="ui pointing red basic label">
         <p *ngIf="control.errors.required">
             Value is required
