added the last error check

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -12,13 +12,16 @@
     <div *ngIf="authForm.get('password').touched && authForm.get('passwordConfirmation').touched && authForm.errors"
         class="ui red basic label">
         <p *ngIf="authForm.errors.passwordsDontMatch">
-
+            Password and Password Confirmation must match
         </p>
     </div>
 
-    <button class="ui submin button primary">
-        Submit
-    </button>
+    <div>
+        <button class="ui submin button primary">
+            Submit
+        </button>
+
+    </div>
 
     {{ authForm.errors | json}}
 </form>
