added the navBar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
+<div class="ui container">
+    <div class="ui secondary pointing menu">
+        <a routerLink="/" class="item">
+            Angular Email
+        </a>
+
+        <div class="right menu">
+            <a routerLink="/inbox" class="ui item">
+                Inbox
+            </a>
+            <a routerLink="/signout" class="ui item">
+                Sign Out
+            </a>
+            <a routerLink="/" class="ui item">
+                Sign In
+            </a>
+            <a routerLink="/signup" class="ui item">
+                Sign Up
+            </a>
+        </div>
+    </div>
+</div>
+
 <router-outlet></router-outlet>
